# zakatcalc

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  README_DEPLOY_DO.md  SUMMARY.md  Summary.md  agents.md  do-app-spec.yaml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements-selenium.txt  requirements.txt  wsgi.py
app/: __init__.py  cli.py  constants.py  db.py
app/content/: __init__.py  charities.py  guides.py
app/data/: __init__.py  crypto.py  currencies.py  metals.py
app/routes/: __init__.py  api.py  guides.py  health.py  main.py
app/services/: __init__.py  advanced_calc.py  background_sync.py  cache.py  cadence.py  calc.py  charities_service.py  config.py  db_pricing.py  fx.py  geodb_sync.py  geolocation.py  pricing.py  r2_client.py  r2_config.py  seo.py  snapshot_repository.py  sync.py  time_provider.py  visitor_logging.py
app/static/: site.webmanifest
app/templates/: about_zakat.html  base.html  cad_to_bdt.html  calculator.html  charities.html  contact.html  faq.html  guide.html  (+5 more)
data/: pricing_cache.json
docs/: IMPLEMENTATION_PLAN.md
scripts/: backfill_fx_fawaz.py  pricing_sync_daemon.py
tests/: __init__.py  conftest.py  test_api.py  test_app_factory.py  test_cadence.py  test_calculate.py  test_charities_api.py  test_currencies.py  test_geolocation.py  test_guides_pages.py  test_health.py  test_main.py  test_nisab.py  test_pricing_endpoint.py  test_selenium_live.py  test_selenium_local.py  test_selenium_multihost.py  test_sitemap_and_robots.py  test_sync.py  test_visitor_logging.py
(+54 files in other folders)
