[project]
name = "zakat-calculator"
version = "0.1.0"
description = "A simple Zakat Calculator web application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0,<4.0.0",
    "gunicorn>=21.0.0,<23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
